--- a/Swap.html
+++ b/Swap.html
@@ -438,9 +438,12 @@ document.getElementById('sell-curse').addEventListener('click', async () => {
 	const userAddress = accounts[0];
 	popup.style.display = "flex";
 	const amountBNB = parseFloat(document.getElementById('bnb-swap-amount').value);
+	console.log(document.getElementById('bnb-swap-amount').value);
+	console.log(amountBNB);
 
     try {
         const amountWei = web3.utils.toWei(amountBNB.toString(), 'ether');
+	    console.log(amountWei);
         const gas = 5000000;
         const transaction = await contract.methods.sellTokens(amountWei).send({ from: userAddress, gas });
 
