--- a/Swap.html
+++ b/Swap.html
@@ -213,6 +213,11 @@ display:none;
 	<td><span id="refer">0</span> / 2</td>
 
 <tr>
+<tr>
+	<td>Cool Down Time : </td>
+	<td><span id="sell-time">00:00:00</span></td>
+
+<tr>
 </table>
 
 <br>
@@ -458,11 +463,11 @@ document.getElementById('sell-curse').addEventListener('click', async () => {
 
 async function LoadBalance() {
 
-	const accounts = await ethereum.request({ method: 'eth_requestAccounts' });
-	const userAddress = accounts[0];
+const accounts = await ethereum.request({ method: 'eth_requestAccounts' });
+const userAddress = accounts[0];
 
-          const balance = await web3.eth.getBalance(userAddress);
-          const formattedBalance = web3.utils.fromWei(balance, 'ether');
+const balance = await web3.eth.getBalance(userAddress);
+const formattedBalance = web3.utils.fromWei(balance, 'ether');
 
 document.getElementById('bnb-bal').innerText = formattedBalance;
 
@@ -474,9 +479,49 @@ const Total_Refer = await contract.methods.getTotalReferrals(userAddress).call()
 const formattedRefer = web3.utils.fromWei(Total_Refer, 'ether')
 document.getElementById('refer').innerText = formattedRefer;
 
+getRemainingTime();
 
 }
 
+async function getRemainingTime() {
+	const accounts = await window.ethereum.request({ method: 'eth_requestAccounts' });
+	const userAddress = accounts[0];
+
+	try{
+          const remainingTimeInSeconds = await contract.methods.getRemainingTimeToSell().call({
+          from: userAddress,
+        });
+
+        const futureTime = Date.now() + remainingTimeInSeconds * 1000;
+
+        setInterval(() => {
+          const currentTime = Date.now();
+          const timeDifferenceInSeconds = Math.floor((futureTime - currentTime) / 1000);
+
+          if (timeDifferenceInSeconds <= 0) {
+            document.getElementById('sell-time').innerText = '00:00:00';
+          } else {
+            const remainingTimeFormatted = formatTime(timeDifferenceInSeconds);
+            document.getElementById('sell-time').innerText = `${remainingTimeFormatted}`;
+          }
+        }, 1000);
+      } catch (error) {
+        console.error('Error getting remaining time:', error);
+      }
+
+}
+
+    function formatTime(seconds) {
+      const hours = Math.floor(seconds / 3600);
+      const minutes = Math.floor((seconds % 3600) / 60);
+      const remainingSeconds = seconds % 60;
+
+      return `${padZero(hours)}:${padZero(minutes)}:${padZero(remainingSeconds)}`;
+    }
+
+    function padZero(num) {
+      return num < 10 ? `0${num}` : num;
+    }
 
 document.getElementById('bnb-curse').addEventListener('click', (event) => {
   var curseSwapContainer = document.getElementById('curse-swap-container');
