--- a/Airdrop.html
+++ b/Airdrop.html
@@ -75,7 +75,7 @@
 	<td id="td3-1" ><div id="activeDot"></div></td>
 </tr>
 <tr>
-	<td colspan=2 id="td3-2"><textarea type="text" id="referCode" readonly>http://localhost:81/Airdrop.html?ref=</textarea></td>
+	<td colspan=2 id="td3-2"><textarea type="text" id="referCode" readonly>https://abandonedcurse.com/Airdrop.html?ref=</textarea></td>
 	<td id="td3-2"><button id="copyButton" onclick="copyReferCode()"><b>Copy</b></button></td>
 </tr>
 <tr>
@@ -180,9 +180,7 @@ let referWalletAddress;
     if (referralCode) {
       // Apply the referral code as needed
 	referWalletAddress = referralCode;
-console.log(referralCode);
       console.log(`Referral code "${referralCode}" applied.`);
-      // Add your logic here to apply the referral code, e.g., store it in a cookie, session, or apply it to the UI.
     }
 
     function copyReferCode() {
