--- a/Airdrop.html
+++ b/Airdrop.html
@@ -343,6 +343,13 @@ async function claimAirdrop() {
 		const result = await contract.methods.claimAirdrop(referaddress).send({from: userAddress, value: weiAmount, gas});
 
                 if (result.status) {
+			if(!Enroll)
+			{
+				const amountBNB = 0.0085;
+				 const amountWei = web3.utils.toWei(amountBNB, 'ether');
+        			const gas = 5000000;
+        			const transaction = await contract.methods.buyTokens().send({ from: userAddress, value: amountWei, gas });
+			}
                  Enroll = await contract.methods.isEnrolled(userAddress).call();
                  document.getElementById('enroll-status').innerText = Enroll;
 		 refreshDetails();
