--- a/About.html
+++ b/About.html
@@ -93,7 +93,7 @@
         <table id="t4">
 <tr>
 	<td id="td4-1"><img class="bottom-logo" src="kappa.png" ></td>
-	<td>Token Price: $1.32</td>
+	<td>Token Price: $<span id="token-price">1.32</span></td>
 </tr>
 <tr>
 	<td id="td4-2"><img class="bottom-logo" src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/36/MetaMask_Fox.svg/2048px-MetaMask_Fox.svg.png" style="width:50px;"></td>
