--- a/About.html
+++ b/About.html
@@ -114,6 +114,7 @@
     </footer>
 
 <script src="script.js"></script>
+<script src="price-update.js"></script>
 <script>
 function toggleMenu() {
             var nav = document.querySelector('nav');
