--- a/Airdrop.html
+++ b/Airdrop.html
@@ -123,7 +123,7 @@
     </footer>
 
 <script src="https://cdn.jsdelivr.net/npm/web3@1.5.2/dist/web3.min.js"></script>
-
+<script src="price-update.js"></script>
 <script src="walletconnect.js"></script>
 <script src="log.js"></script>
 <script>
