--- a/Contact.html
+++ b/Contact.html
@@ -177,6 +177,7 @@
     </footer>
 
 <script src="https://cdn.jsdelivr.net/npm/web3@1.5.2/dist/web3.min.js"></script>
+	<script src="price-update.js"></script>
 <script>
 
 //--------Date & Time-------------
