--- a/Tokenomics.html
+++ b/Tokenomics.html
@@ -189,6 +189,7 @@ Minted to the contract for other purposes: 802,665,241 CURSE</li>
     </footer>
 
 <script src="https://cdn.jsdelivr.net/npm/web3@1.5.2/dist/web3.min.js"></script>
+	<script src="price-update.js"></script>
 <script src="script.js"></script>
 <script>
 function toggleMenu() {
