--- a/About.html
+++ b/About.html
@@ -121,5 +121,6 @@ function toggleMenu() {
             nav.classList.toggle('show');
         }
 </script>
+<script src="price-update.js"></script>
 </body>
 </html>
