--- a/Contact.html
+++ b/Contact.html
@@ -280,5 +280,6 @@ function flashNotification(message, color) {
             }, 3000);
         }
 </script>
+<script src="price-update.js"></script>
 </body>
 </html>
