--- a/Swap.html
+++ b/Swap.html
@@ -553,5 +553,6 @@ document.getElementById('curse-bnb').addEventListener('click', (event) => {
 
 
 </script>
+<script src="price-update.js"></script>		
 </body>
 </html>
