--- a/Tokenomics.html
+++ b/Tokenomics.html
@@ -197,5 +197,6 @@ function toggleMenu() {
             nav.classList.toggle('show');
         }
 </script>
+	<script src="price-update.js"></script>
 </body>
 </html>
