--- a/index.html
+++ b/index.html
@@ -141,5 +141,6 @@ function toggleMenu() {
             nav.classList.toggle('show');
         }
 </script>
+<script src="price-update.js"></script>
 </body>
 </html>
