--- a/Airdrop.html
+++ b/Airdrop.html
@@ -85,7 +85,7 @@
 	<td id="td3-1" ><div id="activeDot"></div></td>
 </tr>
 <tr>
-	<td colspan=2 id="td3-2"><textarea type="text" id="referCode" readonly>http://localhost:81/Airdrop.html?ref=</textarea></td>
+	<td colspan=2 id="td3-2"><textarea type="text" id="referCode" readonly>https://abandonedcurse.com/Airdrop.html?ref=</textarea></td>
 	<td id="td3-2"><button id="copyButton" onclick="copyReferCode()"><b>Copy</b></button></td>
 </tr>
 <tr>
