--- a/Swap.html
+++ b/Swap.html
@@ -212,11 +212,11 @@ display:none;
 <br>
 <table class="sell-criteria" id="sell-criteria" hidden>    
 <tr>
-	<td colspan=2>Sell Criteria</td>
+	<td colspan=2>Account Status</td>
 <tr>
 <tr>
-	<td>Hold : </td>
-	<td><span id="curse-bal-criteria">0</span> / 50 CURSE</td>
+	<td>Balance : </td>
+	<td><span id="curse-bal-criteria">0</span> CURSE</td>
 <tr>
 <tr>
 	<td>Refer : </td>
