--- a/Swap.html
+++ b/Swap.html
@@ -220,7 +220,7 @@ display:none;
 <tr>
 <tr>
 	<td>Refer : </td>
-	<td><span id="refer">0</span> / 2</td>
+	<td><span id="refer">0</span></td>
 
 <tr>
 <tr>
