--- a/Airdrop.html
+++ b/Airdrop.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Airdrop - Abandoned Curse</title>
-    <link rel="icon" type="image/x-icon" href="Kappa.png">
+    <link rel="icon" type="image/x-icon" href="kappa.png">
     <link rel="stylesheet" type="text/css" href="design.css">
     <link rel="stylesheet" type="text/css" href="header.css">
     <link rel="stylesheet" type="text/css" href="footer.css">
