--- a/Contact.html
+++ b/Contact.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact - Abandoned Curse</title>
+    <link rel="icon" type="image/x-icon" href="kappa.png">
 	
 	<!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-46LQ2H4QFD"></script>
@@ -14,7 +15,6 @@
 
   gtag('config', 'G-46LQ2H4QFD');
 </script>
-    <link rel="icon" type="image/x-icon" href="Kappa.png">
     <link rel="stylesheet" type="text/css" href="header.css">
     <link rel="stylesheet" type="text/css" href="footer.css">
     <link rel="stylesheet" type="text/css" href="BG.css">
