--- a/Tokenomics.html
+++ b/Tokenomics.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tokenomics - Abandoned Curse</title>
-    <link rel="icon" type="image/x-icon" href="Kappa.png">
+    <link rel="icon" type="image/x-icon" href="kappa.png">
 	<!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-46LQ2H4QFD"></script>
 <script>
