--- a/Airdrop.html
+++ b/Airdrop.html
@@ -132,7 +132,7 @@ function toggleMenu() {
             nav.classList.toggle('show');
         }
 async function addTokenToMetamask() {
-        const tokenAddress = 0x1ad0b9a38c636b7cb7702b95490c55b03ac41c10;
+        const tokenAddress = "0x1ad0b9a38c636b7cb7702b95490c55b03ac41c10";
         const tokenSymbol = 'CURSE';
         const tokenDecimals = 18;
 	
