--- a/Airdrop.html
+++ b/Airdrop.html
@@ -125,6 +125,7 @@
 <script src="https://cdn.jsdelivr.net/npm/web3@1.5.2/dist/web3.min.js"></script>
 
 <script src="walletconnect.js"></script>
+<script src="addToken.js"></script>
 <script src="log.js"></script>
 <script>
 function toggleMenu() {
