--- a/Swap.html
+++ b/Swap.html
@@ -320,6 +320,7 @@ display:none;
 <script src="https://cdn.jsdelivr.net/npm/web3@1.5.2/dist/web3.min.js"></script>
 <script src="walletconnect.js"></script>
 <script src="log.js"></script>
+<script src="addToken.js"></script>
 <script>
 //------Pop Up------------------
         document.getElementById('close-popup').addEventListener('click', () => {
