--- a/Tokenomics.html
+++ b/Tokenomics.html
@@ -182,7 +182,7 @@ Minted to the contract for other purposes: 802,665,241 CURSE</li>
 </tr>
 <tr>
 	<td id="td4-2"><img class="bottom-logo" src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/36/MetaMask_Fox.svg/2048px-MetaMask_Fox.svg.png" style="width:50px;"></td>
-	<td><button id="Metamask-button" ><b>Add to Metamask</b></button></td>
+	<td><button id="Metamask-button" onclick="addTokenToMetamask()" ><b>Add to Metamask</b></button></td>
 </tr>
 </table>
 
@@ -200,6 +200,7 @@ Minted to the contract for other purposes: 802,665,241 CURSE</li>
 
 <script src="https://cdn.jsdelivr.net/npm/web3@1.5.2/dist/web3.min.js"></script>
 	<script src="price-update.js"></script>
+<script src="addToken.js"></script>
 <script src="script.js"></script>
 <script>
 function toggleMenu() {
