--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 </tr>
 <tr>
 	<td id="td4-2"><img class="bottom-logo" src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/36/MetaMask_Fox.svg/2048px-MetaMask_Fox.svg.png" style="width:50px;"></td>
-	<td><button id="Metamask-button" ><b>Add to Metamask</b></button></td>
+	<td><button id="Metamask-button" onclick="addTokenToMetamask()" ><b>Add to Metamask</b></button></td>
 </tr>
 </table>
 
@@ -135,6 +135,8 @@
         </div>
     </footer>
 
+
+<script src="addToken.js"></script>
 <script>
 function toggleMenu() {
             var nav = document.querySelector('nav');
