--- a/Airdrop.html
+++ b/Airdrop.html
@@ -126,6 +126,7 @@
 
 <script src="walletconnect.js"></script>
 <script src="addToken.js"></script>
+<script src="price-update.js"></script>
 <script src="log.js"></script>
 <script>
 function toggleMenu() {
