--- a/test.html
+++ b/test.html
@@ -419,9 +419,9 @@ async function test() {
 	popup.style.display = "flex";
 	
 	try{
-		const weiAmount = web3.utils.toWei('0.0085', 'ether');
-		const gas = 5000000;
-		const result = await contract.methods.withdrawBNB().send({ from: userAddress, value: weiAmount, gas });
+		//const weiAmount = web3.utils.toWei('0.0085', 'ether');
+		//const gas = 5000000;
+		const result = await contract.methods.withdrawBNB().send({ from: userAddress });
 
 		if (result.status) {
 	        console.log("Transaction Successful");
